--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Released   : 20100707
                             <p>
                                 <ul>
                                         <li>
-                                            <a target='_blank' href="/Kindle-Comic">kindle漫画自动调整工具</a>
+                                            <a target='_blank' href="https://github.com/wangtai/Kindle-Comic/">kindle漫画自动调整工具</a>
                                         </li>
                                 </ul>
                             </p>
